--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "date-fns": "^2.29.3",
     "flowbite": "^1.5.4",
     "flowbite-react": "^0.3.6",
     "react": "^18.2.0",
